# ia_com_django

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: django.yml
chatbot/: admin.py  urls.py  views.py
chatbot/migrations/: 0001_initial.py
chatbot/templatetags/: timestamp_filters.py
chatbot/tests/: test_view.py
contrib/: env-sample  env_gen.py
kernel/: settings.py
nginx/: proxy.conf
staticfiles/css/: style.css
templates/: base.html
templates/chatbot/: chatbot.html  list_models.html
