[project]
name = "ia-com-django"
version = "0.1.0"
description = "Project use in job"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=2.3.0",
    "django-extensions>=3.2.3",
    "django>=5.1.3",
    "ipython>=8.29.0",
    "langchain-groq>=0.2.1",
    "markdown>=3.7",
    "python-decouple>=3.8",
    "whitenoise>=6.8.2",
]
[tool.uv]
cache-dir = "./.uv_cache"
