[project]
name = "ia-com-django"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=5.1.3",
    "django-extensions>=4.1",
    "langchain-groq>=1.1.2",
    "markdown>=3.10.2",
    "python-decouple>=3.8",
    "whitenoise>=6.12.0",
]
[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "taskipy>=1.14.1",
]
# RUFF
[tool.ruff]
line-length = 120
extend-exclude = ['migrations']
[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
[tool.ruff.format]
preview = true
quote-style = 'single'
# PYTEST
[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
# TASKIPY
[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'uv run python manage.py runserver 8001'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_zero -vv'
post_test = 'coverage html'